# Taxi-emulator

./: Cargo.toml  package-lock.json  package.json  serverless.yml
lambda_1/: Cargo.toml
lambda_1/src/: main.rs
